qt/gen_qundostack.nim

import Qt5Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Widgets")
{.compile("gen_qundostack.cpp", cflags).}


import gen_qundostack_types
export gen_qundostack_types

import
  gen_qaction,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs
export
  gen_qaction,
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs

type cQUndoCommand*{.exportc: "QUndoCommand", incompleteStruct.} = object
type cQUndoStack*{.exportc: "QUndoStack", incompleteStruct.} = object

proc fcQUndoCommand_new(): ptr cQUndoCommand {.importc: "QUndoCommand_new".}
proc fcQUndoCommand_new2(text: struct_miqt_string): ptr cQUndoCommand {.importc: "QUndoCommand_new2".}
proc fcQUndoCommand_new3(parent: pointer): ptr cQUndoCommand {.importc: "QUndoCommand_new3".}
proc fcQUndoCommand_new4(text: struct_miqt_string, parent: pointer): ptr cQUndoCommand {.importc: "QUndoCommand_new4".}
proc fcQUndoCommand_undo(self: pointer, ): void {.importc: "QUndoCommand_undo".}
proc fcQUndoCommand_redo(self: pointer, ): void {.importc: "QUndoCommand_redo".}
proc fcQUndoCommand_text(self: pointer, ): struct_miqt_string {.importc: "QUndoCommand_text".}
proc fcQUndoCommand_actionText(self: pointer, ): struct_miqt_string {.importc: "QUndoCommand_actionText".}
proc fcQUndoCommand_setText(self: pointer, text: struct_miqt_string): void {.importc: "QUndoCommand_setText".}
proc fcQUndoCommand_isObsolete(self: pointer, ): bool {.importc: "QUndoCommand_isObsolete".}
proc fcQUndoCommand_setObsolete(self: pointer, obsolete: bool): void {.importc: "QUndoCommand_setObsolete".}
proc fcQUndoCommand_id(self: pointer, ): cint {.importc: "QUndoCommand_id".}
proc fcQUndoCommand_mergeWith(self: pointer, other: pointer): bool {.importc: "QUndoCommand_mergeWith".}
proc fcQUndoCommand_childCount(self: pointer, ): cint {.importc: "QUndoCommand_childCount".}
proc fcQUndoCommand_child(self: pointer, index: cint): pointer {.importc: "QUndoCommand_child".}
proc fQUndoCommand_virtualbase_undo(self: pointer, ): void{.importc: "QUndoCommand_virtualbase_undo".}
proc fcQUndoCommand_override_virtual_undo(self: pointer, slot: int) {.importc: "QUndoCommand_override_virtual_undo".}
proc fQUndoCommand_virtualbase_redo(self: pointer, ): void{.importc: "QUndoCommand_virtualbase_redo".}
proc fcQUndoCommand_override_virtual_redo(self: pointer, slot: int) {.importc: "QUndoCommand_override_virtual_redo".}
proc fQUndoCommand_virtualbase_id(self: pointer, ): cint{.importc: "QUndoCommand_virtualbase_id".}
proc fcQUndoCommand_override_virtual_id(self: pointer, slot: int) {.importc: "QUndoCommand_override_virtual_id".}
proc fQUndoCommand_virtualbase_mergeWith(self: pointer, other: pointer): bool{.importc: "QUndoCommand_virtualbase_mergeWith".}
proc fcQUndoCommand_override_virtual_mergeWith(self: pointer, slot: int) {.importc: "QUndoCommand_override_virtual_mergeWith".}
proc fcQUndoCommand_delete(self: pointer) {.importc: "QUndoCommand_delete".}
proc fcQUndoStack_new(): ptr cQUndoStack {.importc: "QUndoStack_new".}
proc fcQUndoStack_new2(parent: pointer): ptr cQUndoStack {.importc: "QUndoStack_new2".}
proc fcQUndoStack_metaObject(self: pointer, ): pointer {.importc: "QUndoStack_metaObject".}
proc fcQUndoStack_metacast(self: pointer, param1: cstring): pointer {.importc: "QUndoStack_metacast".}
proc fcQUndoStack_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QUndoStack_metacall".}
proc fcQUndoStack_tr(s: cstring): struct_miqt_string {.importc: "QUndoStack_tr".}
proc fcQUndoStack_trUtf8(s: cstring): struct_miqt_string {.importc: "QUndoStack_trUtf8".}
proc fcQUndoStack_clear(self: pointer, ): void {.importc: "QUndoStack_clear".}
proc fcQUndoStack_push(self: pointer, cmd: pointer): void {.importc: "QUndoStack_push".}
proc fcQUndoStack_canUndo(self: pointer, ): bool {.importc: "QUndoStack_canUndo".}
proc fcQUndoStack_canRedo(self: pointer, ): bool {.importc: "QUndoStack_canRedo".}
proc fcQUndoStack_undoText(self: pointer, ): struct_miqt_string {.importc: "QUndoStack_undoText".}
proc fcQUndoStack_redoText(self: pointer, ): struct_miqt_string {.importc: "QUndoStack_redoText".}
proc fcQUndoStack_count(self: pointer, ): cint {.importc: "QUndoStack_count".}
proc fcQUndoStack_index(self: pointer, ): cint {.importc: "QUndoStack_index".}
proc fcQUndoStack_text(self: pointer, idx: cint): struct_miqt_string {.importc: "QUndoStack_text".}
proc fcQUndoStack_createUndoAction(self: pointer, parent: pointer): pointer {.importc: "QUndoStack_createUndoAction".}
proc fcQUndoStack_createRedoAction(self: pointer, parent: pointer): pointer {.importc: "QUndoStack_createRedoAction".}
proc fcQUndoStack_isActive(self: pointer, ): bool {.importc: "QUndoStack_isActive".}
proc fcQUndoStack_isClean(self: pointer, ): bool {.importc: "QUndoStack_isClean".}
proc fcQUndoStack_cleanIndex(self: pointer, ): cint {.importc: "QUndoStack_cleanIndex".}
proc fcQUndoStack_beginMacro(self: pointer, text: struct_miqt_string): void {.importc: "QUndoStack_beginMacro".}
proc fcQUndoStack_endMacro(self: pointer, ): void {.importc: "QUndoStack_endMacro".}
proc fcQUndoStack_setUndoLimit(self: pointer, limit: cint): void {.importc: "QUndoStack_setUndoLimit".}
proc fcQUndoStack_undoLimit(self: pointer, ): cint {.importc: "QUndoStack_undoLimit".}
proc fcQUndoStack_command(self: pointer, index: cint): pointer {.importc: "QUndoStack_command".}
proc fcQUndoStack_setClean(self: pointer, ): void {.importc: "QUndoStack_setClean".}
proc fcQUndoStack_resetClean(self: pointer, ): void {.importc: "QUndoStack_resetClean".}
proc fcQUndoStack_setIndex(self: pointer, idx: cint): void {.importc: "QUndoStack_setIndex".}
proc fcQUndoStack_undo(self: pointer, ): void {.importc: "QUndoStack_undo".}
proc fcQUndoStack_redo(self: pointer, ): void {.importc: "QUndoStack_redo".}
proc fcQUndoStack_setActive(self: pointer, ): void {.importc: "QUndoStack_setActive".}
proc fcQUndoStack_indexChanged(self: pointer, idx: cint): void {.importc: "QUndoStack_indexChanged".}
proc fQUndoStack_connect_indexChanged(self: pointer, slot: int) {.importc: "QUndoStack_connect_indexChanged".}
proc fcQUndoStack_cleanChanged(self: pointer, clean: bool): void {.importc: "QUndoStack_cleanChanged".}
proc fQUndoStack_connect_cleanChanged(self: pointer, slot: int) {.importc: "QUndoStack_connect_cleanChanged".}
proc fcQUndoStack_canUndoChanged(self: pointer, canUndo: bool): void {.importc: "QUndoStack_canUndoChanged".}
proc fQUndoStack_connect_canUndoChanged(self: pointer, slot: int) {.importc: "QUndoStack_connect_canUndoChanged".}
proc fcQUndoStack_canRedoChanged(self: pointer, canRedo: bool): void {.importc: "QUndoStack_canRedoChanged".}
proc fQUndoStack_connect_canRedoChanged(self: pointer, slot: int) {.importc: "QUndoStack_connect_canRedoChanged".}
proc fcQUndoStack_undoTextChanged(self: pointer, undoText: struct_miqt_string): void {.importc: "QUndoStack_undoTextChanged".}
proc fQUndoStack_connect_undoTextChanged(self: pointer, slot: int) {.importc: "QUndoStack_connect_undoTextChanged".}
proc fcQUndoStack_redoTextChanged(self: pointer, redoText: struct_miqt_string): void {.importc: "QUndoStack_redoTextChanged".}
proc fQUndoStack_connect_redoTextChanged(self: pointer, slot: int) {.importc: "QUndoStack_connect_redoTextChanged".}
proc fcQUndoStack_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QUndoStack_tr2".}
proc fcQUndoStack_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QUndoStack_tr3".}
proc fcQUndoStack_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QUndoStack_trUtf82".}
proc fcQUndoStack_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QUndoStack_trUtf83".}
proc fcQUndoStack_createUndoAction2(self: pointer, parent: pointer, prefix: struct_miqt_string): pointer {.importc: "QUndoStack_createUndoAction2".}
proc fcQUndoStack_createRedoAction2(self: pointer, parent: pointer, prefix: struct_miqt_string): pointer {.importc: "QUndoStack_createRedoAction2".}
proc fcQUndoStack_setActive1(self: pointer, active: bool): void {.importc: "QUndoStack_setActive1".}
proc fQUndoStack_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QUndoStack_virtualbase_metacall".}
proc fcQUndoStack_override_virtual_metacall(self: pointer, slot: int) {.importc: "QUndoStack_override_virtual_metacall".}
proc fQUndoStack_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QUndoStack_virtualbase_event".}
proc fcQUndoStack_override_virtual_event(self: pointer, slot: int) {.importc: "QUndoStack_override_virtual_event".}
proc fQUndoStack_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QUndoStack_virtualbase_eventFilter".}
proc fcQUndoStack_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QUndoStack_override_virtual_eventFilter".}
proc fQUndoStack_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QUndoStack_virtualbase_timerEvent".}
proc fcQUndoStack_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QUndoStack_override_virtual_timerEvent".}
proc fQUndoStack_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QUndoStack_virtualbase_childEvent".}
proc fcQUndoStack_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QUndoStack_override_virtual_childEvent".}
proc fQUndoStack_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QUndoStack_virtualbase_customEvent".}
proc fcQUndoStack_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QUndoStack_override_virtual_customEvent".}
proc fQUndoStack_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QUndoStack_virtualbase_connectNotify".}
proc fcQUndoStack_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QUndoStack_override_virtual_connectNotify".}
proc fQUndoStack_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QUndoStack_virtualbase_disconnectNotify".}
proc fcQUndoStack_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QUndoStack_override_virtual_disconnectNotify".}
proc fcQUndoStack_staticMetaObject(): pointer {.importc: "QUndoStack_staticMetaObject".}
proc fcQUndoStack_delete(self: pointer) {.importc: "QUndoStack_delete".}


func init*(T: type QUndoCommand, h: ptr cQUndoCommand): QUndoCommand =
  T(h: h)
proc create*(T: type QUndoCommand, ): QUndoCommand =

  QUndoCommand.init(fcQUndoCommand_new())
proc create*(T: type QUndoCommand, text: string): QUndoCommand =

  QUndoCommand.init(fcQUndoCommand_new2(struct_miqt_string(data: text, len: csize_t(len(text)))))
proc create*(T: type QUndoCommand, parent: QUndoCommand): QUndoCommand =

  QUndoCommand.init(fcQUndoCommand_new3(parent.h))
proc create*(T: type QUndoCommand, text: string, parent: QUndoCommand): QUndoCommand =

  QUndoCommand.init(fcQUndoCommand_new4(struct_miqt_string(data: text, len: csize_t(len(text))), parent.h))
proc undo*(self: QUndoCommand, ): void =

  fcQUndoCommand_undo(self.h)

proc redo*(self: QUndoCommand, ): void =

  fcQUndoCommand_redo(self.h)

proc text*(self: QUndoCommand, ): string =

  let v_ms = fcQUndoCommand_text(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret
